fixed spacing issued with footer

--- a/css/style.css
+++ b/css/style.css
@@ -1,10 +1,11 @@
 /*Project Styles*/
 
 body{
-  margin: 100px auto;
+  /*margin-top: 100px;*/
   color: white;
   background-color: #adb8db;
-  box-sizing:border-box;
+  /*box-sizing:border-box;*/
+  /*position: relative;*/
 }
 
 p {
@@ -15,6 +16,11 @@ h1, h2, h3, {
   font: 2em 'Open Sans', sans-serif;
 }
 
+.div {
+ background-color: #303642;
+ height: 500px;
+ width: auto;
+ }
 
 /*#home styles*/
  .navbar{
@@ -23,11 +29,12 @@ h1, h2, h3, {
 
  .navbar a {
    display: inline;
+   color:white;
  }
 
 
- .navbar a:hover{
-   background-color: white;
+ .navbar a:hover, .navbar a:active{
+   background-color: rgba(42,62,161,1);
  }
 
  /*________________________+*/
@@ -94,6 +101,10 @@ box-shadow: 10px 10px 5px 0px rgba(42,62,161,1);
 
 /*#ContactMe Styles*/
 
+
+#ContactMe {
+  margin-bottom: 50px;
+}
 
 #ContactMe p {
   margin: 30px 0 50px 0 ;
